# cv-generator

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml  prod_image_build.yml
backend/: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini
backend/config/: auto_docs_urls.py  settings.py  urls.py
backend/generator/: conftest.py  conftests.py
backend/generator/account/: models.py
backend/generator/accounts/: models.py
backend/generator/core/: settings.py  urls.py
backend/generator/profile/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/generator/profile/migrations/: 0001_initial.py  0002_auto_20211013_2109.py  0002_auto_20211026_1137.py  0002_experience.py  0002_profile_user.py  0003_alter_experience_until.py  0003_alter_profile_number.py  0003_alter_profile_user.py  0003_auto_20210914_2200.py
backend/generator/profile/tests/: conftest.py  factories.py  test_experience_view_set.py  test_profile_view_set.py  test_profiles.py  test_services.py  test_validators.py  test_views.py
backend/generator/user/: admin.py  forms.py  managers.py  models.py  urls.py
backend/generator/user/migrations/: 0001_initial.py
backend/generator/user/tests/: factories.py  test_creating_users.py
backend/generator/users/: admin.py  models.py
backend/project/core/: auto_docs_urls.py  settings.py  urls.py
