[tool.poetry]
name = "backend"
version = "1"
description = ""
authors = ["ssyucfa <payk1230@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
docxtpl = "^0.12.0"
psycopg2 = "^2.9.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
